tests/baselines/reference/unusedTypeParameterInFunction2.errors.txt
unusedTypeParameterInFunction2.ts(1,16): error TS6133: 'Y' is declared but its value is never read.


==== unusedTypeParameterInFunction2.ts (1 errors) ====
    function f1<X, Y>() {
                   ~
!!! error TS6133: 'Y' is declared but its value is never read.
        var a: X;
        a;
    }